PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_Bid_Process_History__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Approval_Completed_Time_String__c</fullName>
        <label>Approval Completed Time String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approval_Completed_Time__c</fullName>
        <label>Approval Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approval_Sent_Time_String__c</fullName>
        <label>Approval Sent Time String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approval_Sent_Time__c</fullName>
        <label>Approval Sent Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approver_Team_Members__c</fullName>
        <label>Approver Team Members</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approver_Team__c</fullName>
        <label>Approver Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bid_Process_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Process_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Process Step</label>
        <referenceTo>Phoenix_Bid_Process_Steps__c</referenceTo>
        <relationshipLabel>Bid Process History</relationshipLabel>
        <relationshipName>Bid_Process_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>Bid Process History</relationshipLabel>
        <relationshipName>Bid_Process_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Stage__c</fullName>
        <label>Current Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Criteria_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Criteria Step?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NDC Change</label>
        <referenceTo>Phoenix_NDC_Change__c</referenceTo>
        <relationshipLabel>Bid Process History</relationshipLabel>
        <relationshipName>Bid_Process_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Previous_Stage__c</fullName>
        <label>Previous Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Step__c</fullName>
        <label>Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sub_Step__c</fullName>
        <label>Sub Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Send Back</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WAC Change</label>
        <referenceTo>Phoenix_WAC_Change__c</referenceTo>
        <relationshipLabel>Bid Process History</relationshipLabel>
        <relationshipName>Bid_Process_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_selected_Recall_Option__c</fullName>
        <label>Selected Recall Option</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Bid Process History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ProcessHistory-{0000000}</displayFormat>
        <label>Bid Process History No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bid Process History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>